@@ -101,7 +101,7 @@ GENERATE_MAN           = YES
 MAN_OUTPUT             = man
 MAN_EXTENSION          = .3
 MAN_LINKS              = YES
-GENERATE_XML           = NO
+GENERATE_XML           = YES
 XML_SCHEMA             =
 XML_DTD                =
 GENERATE_AUTOGEN_DEF   = NO
